--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel panel-info">
+            <div class="panel panel-info" ng-if="vm.auth.user.roles == 'teacher'">
                 <div class="panel-heading">
                     <h3 class="panel-title">Lớp học của tôi <button ng-if="vm.auth.user.roles == 'teacher'" style="border: 0; background: none" ng-click="vm.addGroup()" class="pull-right"><span class="fa fa-plus"></span></button></h3>
                 </div>
@@ -41,9 +41,9 @@
                     <h3 class="panel-title">Lớp học đã tham dự</h3>
                 </div>
                 <div class="panel-body" style="padding: 0">
-                    <div ng-repeat="group in vm.groupJoined|orderBy:'createdAt'|limitTo: vm.joinedLength">
+                    <div ng-repeat="data in vm.groupJoined|orderBy:'createdAt'|limitTo: vm.joinedLength">
                         <ul class="list-group"  style="margin-bottom: 0">
-                            <a ng-href="/group/{{group._id}}/home" class="list-group-item" style="border-radius: 0">{{group.groupName}}</a>
+                            <a ng-href="/group/{{data.group._id}}/home" class="list-group-item" style="border-radius: 0">{{data.group.groupName}}</a>
                         </ul>
                     </div>
                     <ul class="list-group"  style="margin-bottom: 0" ng-if="!vm.groupJoined.length">
