--- a/modules/group/client/views/group-documents.client.view.html
+++ b/modules/group/client/views/group-documents.client.view.html
@@ -1,6 +1,43 @@
 <section ng-controller="GroupDocumentsController as vm">
     <div class="panel panel-default">
+        <div class="panel-heading"  style="min-height: 50px;">
+            <div class="col-xs-3"><h3 class="panel-title">Học viên</h3></div>
+            <div class="col-xs-9">
+                <button class="btn btn-default pull-right" ng-click="vm.showUploadDiv=!vm.showUploadDiv">
+                    <span>{{!vm.showUploadDiv?'Tải lên': ' Hủy'}}</span>
+                </button>
+            </div>
+        </div>
         <div class="panel-body">
+            <div class="upload" ng-if="vm.showUploadDiv" style="border: 1px solid #ddd; padding: 10px 10px; margin-bottom: 10px">
+                <form novalidate>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input id="my-file-selector" type="file" style="display:none" onchange="$('#upload-file-info').html(this.files[0].name)">
+                            <button class="btn btn-default" ng-click="vm.chooseFile()">
+                                Chọn file
+                            </button>
+                            <span class='label label-info' id="upload-file-info" ng-model="vm.fileName"></span>
+                        </div>
+                        <div class="col-sm-12" style="padding: 10px">
+                            <div class="form-group">
+                                <label for="name">Tên tài liệu</label>
+                                <input id="name"  class="form-control"  type="text" ng-model="vm.name" placeholder="Tên tài liệu">
+                            </div>
+                            <div class="form-group">
+                                <label for="desc">Mô tả:</label>
+                                <text-angular ta-toolbar="[['charcount']]" id="desc" ng-model="vm.desc">
+                                </text-angular>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <button class="btn btn-success" ng-disabled="!vm.file" ng-click="vm.uploadFile()">
+                            Tải lên
+                        </button>
+                    </div>
+                </form>
+            </div>
             <ul class="list-group">
                 <li class="list-group-item">
                     <div class="row">
