--- a/modules/group/client/views/group-documents.client.view.html
+++ b/modules/group/client/views/group-documents.client.view.html
@@ -1,7 +1,7 @@
 <section ng-controller="GroupDocumentsController as vm">
     <div class="panel panel-default">
         <div class="panel-heading"  style="min-height: 50px;">
-            <div class="col-xs-3"><h3 class="panel-title">Học viên</h3></div>
+            <div class="col-xs-3"><h3 class="panel-title">Tài liệu</h3></div>
             <div class="col-xs-9">
                 <button class="btn btn-default pull-right" ng-click="vm.showUploadDiv=!vm.showUploadDiv">
                     <span>{{!vm.showUploadDiv?'Tải lên': ' Hủy'}}</span>
