--- a/modules/group/client/views/group-documents.client.view.html
+++ b/modules/group/client/views/group-documents.client.view.html
@@ -21,18 +21,18 @@
                         </div>
                         <div class="col-sm-12" style="padding: 10px">
                             <div class="form-group">
-                                <label for="name">Tên tài liệu</label>
-                                <input id="name"  class="form-control"  type="text" ng-model="vm.name" placeholder="Tên tài liệu">
+                                <label for="name">Tên tài liệu *</label>
+                                <input id="name"  class="form-control"  type="text" ng-model="vm.fileInfo.name" placeholder="Tên tài liệu">
                             </div>
                             <div class="form-group">
                                 <label for="desc">Mô tả:</label>
-                                <text-angular ta-toolbar="[['charcount']]" id="desc" ng-model="vm.desc">
+                                <text-angular ta-toolbar="[['charcount']]" id="desc" ng-model="vm.fileInfo.desc">
                                 </text-angular>
                             </div>
                         </div>
                     </div>
                     <div class="row text-center">
-                        <button class="btn btn-success" ng-disabled="!vm.file" ng-click="vm.uploadFile()">
+                        <button class="btn btn-success"  ng-click="vm.uploadFile()">
                             Tải lên
                         </button>
                     </div>
