remove multi teacher in class

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel panel-info">
+            <div class="panel panel-info" ng-if="vm.auth.user.roles == 'student'">
                 <div class="panel-heading">
                     <h3 class="panel-title">Lớp học đã tham dự</h3>
                 </div>
