--- a/modules/group/client/views/group-info.client.view.html
+++ b/modules/group/client/views/group-info.client.view.html
@@ -22,8 +22,8 @@
               <p>Bình luận</p>
             </li>
             <li>
-              <p class="statics-count"><i class="fa fa-user-secret"></i> <span ng-bind="vm.count.teachers+1"></span></p>
-              <p>Giáo viên</p>
+              <p class="statics-count"><i class="fa fa-file"></i> <span ng-bind="vm.count.teachers+1"></span></p>
+              <p>Bài kiểm tra</p>
             </li>
             <li>
               <p class="statics-count"><i class="fa fa-user"></i> <span ng-bind="vm.count.students"></span></p>
