--- a/modules/group/client/views/group-assigments.client.view.html
+++ b/modules/group/client/views/group-assigments.client.view.html
@@ -1,7 +1,7 @@
 <section ng-controller="GroupAssigmentsController as vm">
   <div class="panel panel-default user_panel">
     <div class="panel-heading" style="height: 40px;">
-      <div class="col-xs-3"><h3 class="panel-title">Giáo viên</h3></div>
+      <div class="col-xs-3"><h3 class="panel-title">Bài kiểm tra</h3></div>
       <div class="col-xs-9">
         <button style="border: 0; background: none" ng-click="vm.addTeachers()" class="pull-right"><span class="fa fa-plus"></span></button>
       </div>
@@ -49,13 +49,49 @@
 <script type="text/ng-template" id="add-assigments-modal.html">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="vm.close()"><span aria-hidden="true">&times;</span></button>
-    <h4 class="modal-title">Thêm giáo viên</h4>
+    <h4 class="modal-title">Tạo bài kiểm tra</h4>
   </div>
   <div class="modal-body">
-    <div class="row">
-      <div class="form-group col-md-12">
+    <div class="row" style="padding: 20px">
+      <form novalidate >
+          <div class="row">
+            <div class="col-md-6">
+              <label for="">Tên bài kiểm tra</label>
+              <input type="text" ng-model="vm.assigment.name" class="form-control">
+            </div>
+            <div class="col-md-6">
 
-      </div>
+            </div>
+          </div>
+          <div class="row" style="padding-top: 20px">
+            <div class="col-md-6 form-group">
+              <label for="">Ngày bắt đầu</label>
+              <div class="form-group">
+                <div class="input-group input-group date">
+                  <input type="text" style="border-radius: 0" placeholder="From date" class="form-control" ng-model="vm.assigment.startDate" ng-model-options="{ timezone: 'UTC' }"  uib-datepicker-popup="MM/dd/yyyy" is-open="vm.showCalendar1" datepicker-options="{showWeeks:false}" ng-click="vm.openDatePicker1()" />
+                  <span style="border-radius: 0; cursor: pointer" class="input-group-addon" ng-click="vm.openDatePicker1()">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-md-6 form-group">
+              <label for="">Hạn nộp</label>
+              <div class="form-group">
+                <div class="input-group input-group date">
+                  <input type="text" style="border-radius: 0" placeholder="From date" class="form-control" ng-model="vm.assigment.endDate" ng-model-options="{ timezone: 'UTC' }"  uib-datepicker-popup="MM/dd/yyyy" is-open="vm.showCalendar1" datepicker-options="{showWeeks:false}" ng-click="vm.openDatePicker1()" />
+                  <span style="border-radius: 0; cursor: pointer" class="input-group-addon" ng-click="vm.openDatePicker1()">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+
+          </div>
+        </form>
     </div>
   </div>
   <div class="modal-footer text-right">
