create new directive

--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -38,7 +38,7 @@
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
               </div>
             </div>
-            <div class="nav-tabs" ng-if="vm.groupInfo.createdBy._id == vm.auth.user._id">
+            <div class="nav-tabs">
               <div class="list-heading" ui-sref="group.assigments">
                 Bài kiểm tra
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
