--- a/modules/group/client/views/group-assigments.client.view.html
+++ b/modules/group/client/views/group-assigments.client.view.html
@@ -2,8 +2,8 @@
   <div class="panel panel-default user_panel">
     <div class="panel-heading" style="height: 40px;">
       <div class="col-xs-3"><h3 class="panel-title">Bài kiểm tra</h3></div>
-      <div class="col-xs-9">
-        <button style="border: 0; background: none" ng-click="vm.addTeachers()" class="pull-right"><span class="fa fa-plus"></span></button>
+      <div class="col-xs-9" ng-if="vm.groupInfo.createdBy._id == vm.auth.user._id">
+        <button style="border: 0; background: none" ng-click="vm.addAssignment()" class="pull-right"><span class="fa fa-plus"></span></button>
       </div>
     </div>
     <div class="panel-body">
@@ -88,14 +88,19 @@
               </div>
             </div>
           </div>
-          <div class="row">
-
+          <div class="row text-center">
+              <button type="button" class="btn btn-default btn-lg" ng-click="vm.addQuestion()"><span class="fa fa-plus"></span> Thêm câu hỏi</span></button>
+          </div>
+          <div class="questions" ng-repeat="question in vm.assigment.questions">
+              <div class="col-md-12">
+                  <question value="question"></question>
+              </div>
           </div>
         </form>
     </div>
   </div>
   <div class="modal-footer text-right">
-    <button class="btn btn-success" ng-disabled="!vm.add.length" ng-click="vm.save()">Thêm</button>
+    <button class="btn btn-success" ng-disabled="!vm.isValidated()" ng-click="vm.save()">Thêm</button>
     <button class="btn btn-default" ng-click="vm.close()">Đóng</button>
   </div>
 </script>
