--- a/modules/group/client/views/group-assigments.client.view.html
+++ b/modules/group/client/views/group-assigments.client.view.html
@@ -88,13 +88,13 @@
               </div>
             </div>
           </div>
-          <div class="row text-center">
-              <button type="button" class="btn btn-default btn-lg" ng-click="vm.addQuestion()"><span class="fa fa-plus"></span> Thêm câu hỏi</span></button>
-          </div>
           <div class="questions" ng-repeat="question in vm.assigment.questions">
               <div class="col-md-12">
                   <question value="question"></question>
               </div>
+          </div>
+          <div class="row text-center">
+            <button type="button" class="btn btn-success" ng-click="vm.addQuestion()"><span class="fa fa-plus"></span> Thêm câu hỏi</span></button>
           </div>
         </form>
     </div>
