--- a/modules/group/client/views/group-assigments.client.view.html
+++ b/modules/group/client/views/group-assigments.client.view.html
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="questions" ng-repeat="question in vm.assigment.questions">
-              <div class="col-md-12">
+              <div class="col-md-12 question">
                   <question value="question"></question>
               </div>
           </div>
