--- a/modules/group/client/views/question-directive.client.view.html
+++ b/modules/group/client/views/question-directive.client.view.html
@@ -29,9 +29,6 @@
                     <div class="form-group">
                         <div class="row" ng-repeat="(index, answer) in vm.question.answers track by index">
                             <div class="col-md-12 input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">{{index}}</span>
-                                </div>
                                 <input type="text" ng-model="answer" placeholder="Thêm câu trả lời" class="form-control"/>
                                 <span class="input-btn input-group-addon group-btn glyphicon glyphicon-minus-sign" ng-click="vm.removeAnswer(index)"></span>
                             </div>
@@ -62,7 +59,7 @@
         <div class="form-group correct-answer col-md-12" ng-if="vm.question.type == 'multi_choice'">
             <ui-select multiple ng-model="vm.question.correctAnswer" tagging-label="false" theme="bootstrap" tagging-tokens=",|/" comma-on-blur>
                 <ui-select-match placeholder="Chọn câu trả lời">{{$item.index}} &lt;{{$item.value}}&gt;</ui-select-match>
-                <ui-select-choices repeat="(index, value) in vm.question.answers | filter: $select.search">
+                <ui-select-choices repeat="index as value in vm.question.answers | filter: $select.search">
                     <div>
                         <span ng-bind="index | highlight: $select.search"></span>
                         &lt;<span ng-bind="value | highlight: $select.search"></span>&gt;
