assignment add & edit & delete

--- a/modules/group/client/css/group.css
+++ b/modules/group/client/css/group.css
@@ -175,6 +175,9 @@ i {  vertical-align: middle; }
     margin-bottom: 30px;
 }
 .question {
-    padding: 10px 10px 0 20px;
+    margin-bottom: 20px;
     border-left: #ccc 10px solid;
+}
+.input-group-addon:hover {
+    cursor: pointer;
 }
